[package]
name = "trilobit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
glam = "0.28.0"
bevy = { version = "0.14.0", optional = true }
rand = { version = "0.8.5", optional = true }

# FIXME: verify this is used
itertools = "0.13.0"

[features]

# Exposes main function that visualizes decomposition process using bevy
vis = ["dep:bevy", "dep:rand"]
